--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -8,7 +8,7 @@
     <script src="/js/script.js"></script>
     <script src="/js/jquery.imagemapster.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://www.outsharked.com/scripts/jquery.imagemapster.js"></script>
+    <!--<script src="http://www.outsharked.com/scripts/jquery.imagemapster.js"></script>-->
     {{#if startCSS}}
         <link href="/css/start-stylesheet.css" rel="stylesheet">
     {{/if}}
