--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/js/script.js"></script>
-    <script src="/js/jquery.min.js"></script>
+    <!--<script src="/js/jquery.min.js"></script>-->
     <script src="/js/jquery.imagemapster.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!--<script src="http://www.outsharked.com/scripts/jquery.imagemapster.js"></script>-->
     {{#if startCSS}}
         <link href="/css/start-stylesheet.css" rel="stylesheet">
