--- a/views/main-menu.hbs
+++ b/views/main-menu.hbs
@@ -20,6 +20,11 @@
       <form class="main-menu-nav" action="/finish" method="GET">
           <button type="submit" name="otherKeyPlaces">Finish</button>
       </form>  
+      <button onclick="basic_nav()" name="basicNav">Basic Navigation</button>
+      <button onclick="academic_buildings()" name="academicBuildings">Academic Buildings</button>
+      <button onclick="services_supports()" name="servicesSupports">Campus Services and Supports</button>
+      <button onclick="other_key_places()" name="otherKeyPlaces">Other Key Places</button>
+      <button onclick="finish()" name="otherKeyPlaces">Finish</button>
     </div>
     <div class="col-sm-7">
       Finding your way around any new place can be difficult and BCIT is no different. While the best way to learn to navigate campus is to do it every day, this activity will help you learn the basics before you even arrive!<br><br>
