--- a/views/start.hbs
+++ b/views/start.hbs
@@ -1,7 +1,8 @@
 <img src="../media/start_background.jpg" alt="Burnaby Campus">
 <div class="col-sm-12">
     How do I navigate the Burnaby campus?
-    <form class="main-menu-nav" action="/main_menu" method="GET">
+    {{!-- <form class="main-menu-nav" action="/main_menu" method="GET">
         <button type="submit" name="basicNav">Start Activity</button>
-    </form>
+    </form> --}}
+    <button onclick="main_menu()" name="basicNav">Start Activity</button>
 </div>
