changed all navigation to not redirect

--- a/views/academic-buildings.hbs
+++ b/views/academic-buildings.hbs
@@ -95,9 +95,10 @@
             <area target="" class="SW" full="SW09 Building" id="SW09" building="SW09" alt="" title="" href=""
                 coords="705,485,760,589" shape="rect">
         </map>
-        <form action="/main_menu" method="GET">
+        {{!-- <form action="/main_menu" method="GET">
             <button type="submit" name="mainMenu" id="main-menu-btn">Main Menu</button>
-        </form>
+        </form> --}}
+        <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
 </div>
 
