--- a/views/finish.hbs
+++ b/views/finish.hbs
@@ -4,9 +4,10 @@
     You must click "Finish" to complete this activity.
 </div>
 <div class="col-sm-6">
-    <form class="main-menu-nav" action="/" method="GET">
+    {{!-- <form class="main-menu-nav" action="/" method="GET">
         <button type="submit" name="basicNav" id="restart">Restart</button>
-    </form>
+    </form> --}}
+    <button name="basicNav" id="restart" onclick="start()">Restart</button>
 </div>
 <div class="col-sm-6">
     <button id="finish">Finish</button>
