--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -36,8 +36,9 @@
     </div>
     <div class="col-sm-10">
         <img src="/media/bcitmap.png" alt="BCIT Burnaby Campus Map">
-        <form action="/main_menu" method="GET">
+        {{!-- <form action="/main_menu" method="GET">
             <button type="submit" name="mainMenu" id="main-menu-btn">Main Menu</button>
-        </form>
+        </form> --}}
+        <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
 </div>
