--- a/views/main-menu.hbs
+++ b/views/main-menu.hbs
@@ -4,8 +4,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-5">
-      <form class="main-menu-nav" action="/basic_nav" method="GET">
+    <div class="col-sm-5 main-menu-nav">
+      {{!-- <form class="main-menu-nav" action="/basic_nav" method="GET">
           <button type="submit" name="basicNav">Basic Navigation</button>
       </form>
       <form class="main-menu-nav" action="/academic_buildings" method="GET">
@@ -19,7 +19,7 @@
       </form>
       <form class="main-menu-nav" action="/finish" method="GET">
           <button type="submit" name="otherKeyPlaces">Finish</button>
-      </form>  
+      </form>   --}}
       <button onclick="basic_nav()" name="basicNav">Basic Navigation</button>
       <button onclick="academic_buildings()" name="academicBuildings">Academic Buildings</button>
       <button onclick="services_supports()" name="servicesSupports">Campus Services and Supports</button>
