corrected spelling on services-supports.hbs

--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -20,7 +20,7 @@
                 <button class="dropdown-btn">Library</button>
                 <button class="dropdown-btn">Program Advising</button>
                 <button class="dropdown-btn">Recreation Services</button>
-                <button class="dropdown-btn">espect, Diversity &amp; Inclusion Office</button>
+                <button class="dropdown-btn">Respect, Diversity &amp; Inclusion Office</button>
                 <button class="dropdown-btn">Security</button>
                 <button class="dropdown-btn">Sleep pods</button>
                 <button class="dropdown-btn">Student Association</button>
