--- a/views/academic-buildings.hbs
+++ b/views/academic-buildings.hbs
@@ -9,10 +9,11 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-container">
-                    <button id="NEBuildings" onclick="selectGroup()">NE BUILDINGS</button>
-                    <button id="SW09Building" onclick="selectSW()">SW09</button>
-                    <button id="SEBUILDINGS" onclick="selectSE()">SE16/06</button>
-                    <button id="NE01Building" onclick="selectNE01()">NE01</button>
+                    <button id="NEBuildings" onclick="selectNE()">NE Buildings</button>
+                    <button id="NWBuildings" onclick="selectNW()">NW Buildings</button>
+                    <button id="SEBUILDINGS" onclick="selectSE()">SE Buildings</button>
+                    <button id="SWBuildings" onclick="selectSW()">SW Buildings</button>
+                    <button id="CARIBuilding" onclick="selectCARI()">CARI</button>
                 </div>
                 <button class="dropdown-btn">School of Computing and Academic Studies
                     <i class="fa fa-caret-down"></i>
@@ -73,27 +74,27 @@
         </div>
     </div>
     <div class="col-sm-10">
-        <img src="/media/bcitmap.png" usemap="#image-map">
+        <img src="/media/burnaby_campus_map.png" usemap="#image-map">
         <map name="image-map">
-            <area href="#" class="NE" full="ne09 building" id="NE09" building="NE09" target="" alt="" title="" href=""
-                coords="67,203,141,247" shape="rect">
-            <area href="#" class="NE" full="NE10 building" id="NE10" building="NE10" target="" alt="" title="" href=""
-                coords="163,192,166,235,180,238,206,238,226,233,228,190,193,191" shape="poly">
-            <area href="#" class="NE" full="NE12 building" id="NE12" building="NE12" target="" alt="" title="" href=""
-                coords="234,191,236,235,277,238,279,249,287,249,287,232,287,191" shape="poly">
-            <area target="" class="NE" full="NE01 Building" id="NE01" building="NE01" alt="NE01" title="NE01" href=""
-                coords="146,451,67,353" shape="rect">
-            <area target="" class="NE" full="NE04 Building" id="NE04" building="NE04" alt="NE04" title="NE04" href=""
-                coords="161,350,214,390" shape="rect">
-            <area target="" class="NE" full="NE02 Building" id="NE02" building="NE02" alt="NE02" title="NE02" href=""
-                coords="162,397,214,460" shape="rect">
-            <area target="" class="SE" full="SE16 Building" id="SE16" building="SE16" alt="" title="" href=""
-                coords="699,340,687,385,666,393,673,436,714,442,753,426,764,411,735,394,735,385,744,365,713,361,713,343"
-                shape="poly">
-            <area target="" class="SE" full="SE06 Building" id="SE06" building="SE06" alt="" title="" href=""
-                coords="490,406,458,326" shape="rect">
-            <area target="" class="SW" full="SW09 Building" id="SW09" building="SW09" alt="" title="" href=""
-                coords="705,485,760,589" shape="rect">
+<!--            NE Buildings-->
+            
+            
+<!--            NW Buildings-->
+            
+            
+<!--            SE Buildings-->
+            <area target="" class="SE" full="SE019 Building" id="SE019" building="SE019" alt="SE19" title="SE19" href="" coords="1732,143,1868,243" shape="rect">
+            <area target="" class="SE" full="SE30 Building" id="SE30" building="SE30" alt="SE30" title="SE30" href="" coords="2530,179,2659,258" shape="rect">
+            <area target="" class="SE" full="SE40 Building" id="SE40" building="SE40" alt="SE40" title="SE40" href="" coords="3411,163,3407,249,3429,249,3429,265,3479,265,3479,249,3497,249,3500,163" shape="poly">
+            <area target="" class="SE" full="SE41 Building" id="SE41" building="SE41" alt="SE41" title="SE41" href="" coords="3304,251,3361,372" shape="rect">
+            <area target="" class="SE" full="SE42 Building" id="SE42" building="SE42" alt="SE42" title="SE42" href="" coords="3393,357,3393,407,3468,407,3525,364,3525,285,3479,289,3483,339,3457,357" shape="poly">
+            <area target="" class="SE" full="SE50 Building" id="SE50" building="SE50" alt="SE50" title="SE50" href="" coords="3679,174,3679,239,3647,239,3647,296,3726,292,3730,303,3776,303,3776,289,3801,289,3805,235,3762,235,3783,231,3783,217,3787,217,3790,203,3787,189,3765,174" shape="poly">
+            
+<!--            SW Buildings-->
+            
+            
+<!--            CARI Building-->
+            <area target="" class="CARI" full="CARI Building" id="CARI" building="CARI" alt="CARI" title="CARI" href="" coords="2437,1306,2487,1267,2530,1317,2570,1317,2638,1249,2695,1303,2723,1271,2817,1364,2709,1468,2688,1446,2630,1503,2573,1439,2534,1439,2484,1493,2437,1450,2494,1396,2491,1360" shape="poly">
         </map>
         {{!-- <form action="/main_menu" method="GET">
             <button type="submit" name="mainMenu" id="main-menu-btn">Main Menu</button>
@@ -162,7 +163,7 @@ $(document).ready(function(){
 });*/
 
     /* group selection functions */
-    function selectGroup() {
+    function selectNE() {
         $('area').bind('mouseover', function () {
             $('img').mapster('tooltip');
         });
@@ -180,35 +181,18 @@ $(document).ready(function(){
 
     }
 
-    function selectNE01() {
-        $('area').bind('mouseover', function () {
-            $('img').mapster('tooltip');
-        });
-        $('img').mapster(initial_opts)
-            .mapster('set', true, 'NE01', {
-                fill: true,
-                fillColor: 'FF0000'
-            })
-            .mapster('snapshot')
-            .mapster('rebind', basic_opts);
-        $('#NE01').bind('mouseover', function () {
-            $('img').mapster('tooltip', this, $(this).attr('full'));
-
-        });
-    }
-
     function selectSE() {
         $('area').bind('mouseover', function () {
             $('img').mapster('tooltip');
         });
         $('img').mapster(initial_opts)
-            .mapster('set', true, 'SE06,SE16', {
+            .mapster('set', true, 'SE19,SE30,SE40,SE41,SE42,SE50', {
                 fill: true,
                 fillColor: '800000'
             })
             .mapster('snapshot')
             .mapster('rebind', basic_opts);
-        $('#SE06,#SE16').bind('mouseover', function () {
+        $('#SE19,#SE30,#SE40,#SE41,#SE42,#SE50').bind('mouseover', function () {
             $('img').mapster('tooltip', this, $(this).attr('full'));
 
         });
@@ -226,6 +210,23 @@ $(document).ready(function(){
             .mapster('snapshot')
             .mapster('rebind', basic_opts);
         $('#SW09').bind('mouseover', function () {
+            $('img').mapster('tooltip', this, $(this).attr('full'));
+
+        });
+    }
+    
+    function selectCARI() {
+        $('area').bind('mouseover', function () {
+            $('img').mapster('tooltip');
+        });
+        $('img').mapster(initial_opts)
+            .mapster('set', true, 'CARI', {
+                fill: true,
+                fillColor: 'FF0000'
+            })
+            .mapster('snapshot')
+            .mapster('rebind', basic_opts);
+        $('#CARI').bind('mouseover', function () {
             $('img').mapster('tooltip', this, $(this).attr('full'));
 
         });
