--- a/views/academic-buildings.hbs
+++ b/views/academic-buildings.hbs
@@ -14,7 +14,6 @@
                     <button id="SEBUILDINGS" onclick="selectSE()">SE Buildings</button>
                     <button id="SWBuildings" onclick="selectSW()">SW Buildings</button>
                     <button id="CARIBuilding" onclick="selectCARI()">CARI</button>
-                    <button id="BlueBuilding" onclick="selectBLUE()">Blue</button>
                 </div>
                 <button class="dropdown-btn">School of Computing and Academic Studies
                     <i class="fa fa-caret-down"></i>
@@ -112,7 +111,16 @@
                     <area target="" class="SE" full="SE41 Building" id="SE41" building="SE41" alt="SE41" title="SE41" href="" coords="3304,251,3361,372" shape="rect">
                     <area target="" class="SE" full="SE42 Building" id="SE42" building="SE42" alt="SE42" title="SE42" href="" coords="3393,357,3393,407,3468,407,3525,364,3525,285,3479,289,3483,339,3457,357" shape="poly">
                     <area target="" class="SE" full="SE50 Building" id="SE50" building="SE50" alt="SE50" title="SE50" href="" coords="3679,174,3679,239,3647,239,3647,296,3726,292,3730,303,3776,303,3776,289,3801,289,3805,235,3762,235,3783,231,3783,217,3787,217,3790,203,3787,189,3765,174" shape="poly">
-                    
+                    <area href="" class="SE" id="SE01" building="SE01" full="tooltip" coords="1331,237,1127,235,1127,246,973,247,973,309,1048,309,1069,330,1048,363,1059,377,1073,370,1080,377,1091,377,1102,391,1116,381,1130,377,1137,363,1177,359,1184,338,1295,338,1306,302,1313,280,1331,284" shape="poly">
+                    <area href="" class="SE" id="SE04" building="SE04" full="tooltip" coords="1123,434,1019,434,1019,462,1037,466,1041,530,1130,534,1130,484,1120,484,1130,484" shape="poly">
+                    <area href="" class="SE" id="SE02" building="SE02" full="tooltip" coords="1159,566,1009,563,1009,703,987,703,995,760,980,764,977,810,1156,814,1152,771,1141,771,1138,645,1156,641" shape="poly">
+                    <area href="" class="SE" id="SE06" building="SE06" full="tooltip" coords="1166,419,1238,419,1238,563,1267,563,1267,649,1163,649" shape="poly">
+                    <area href="" class="SE" id="SE09" building="SE09" full="tooltip" coords="1338,681,1392,720" shape="rect">
+                    <area href="" class="SE" id="SE08" building="SE08" full="tooltip" coords="1335,681,1209,681,1209,713,1166,713,1166,749,1202,749,1206,792,1331,788" shape="poly">
+                    <area href="" class="SE" id="SE12" building="SE12" full="tooltip" coords="1338,724,1639,727,1643,799,1338,799" shape="poly">
+                    <area href="" class="SE" id="SE14" building="SE14" full="tooltip" coords="1567,720,1567,670,1600,670,1596,505,1610,505,1610,487,1625,487,1625,505,1668,505,1674,681,1631,678,1632,720" shape="poly">
+                    <area href="" class="SE" id="SE10" building="SE10" full="tooltip" coords="1495,487,1528,487,1528,508,1549,508,1546,530,1556,530,1556,601,1571,623,1571,666,1492,669,1492,601,1474,601,1474,512,1495,508" shape="poly">
+                    <area href="" class="SE" id="SE16" building="SE16" full="tooltip" coords="1800,482,1800,580,1800,616,1778,632,1742,632,1742,715,1753,715,1750,736,1764,740,1764,754,1900,754,1904,747,1954,743,1954,718,1964,718,1961,708,1986,708,1982,682,1964,675,1964,647,1911,643,1911,614,1932,611,1936,546,1868,546,1864,495,1828,495,1828,484" shape="poly">
         <!--            SW Buildings-->
                     <area href="" id="SW01" building="SW01" full="tooltip" coords="1338,923,1334,838,1302,838,1302,879,1270,877,1270,841,1105,838,1105,895,1119,897,1119,927,1048,927,1026,954,1044,988,1084,991,1087,1102,1073,1144,1141,1133,1316,1135,1313,1020,1298,995,1349,999,1363,959,1356,934" shape="poly">
                     <area href="" id="SW02" building="SW02" full="tooltip" coords="1313,1083,1313,1112,1345,1141,1370,1141,1399,1108,1442,1098,1406,1090,1352,1040" shape="poly">
@@ -129,17 +137,7 @@
                     
         <!--            CARI Building-->
                     <area target="" class="CARI" full="CARI Building" id="CARI" building="CARI" alt="CARI" title="CARI" href="" coords="2437,1306,2487,1267,2530,1317,2570,1317,2638,1249,2695,1303,2723,1271,2817,1364,2709,1468,2688,1446,2630,1503,2573,1439,2534,1439,2484,1493,2437,1450,2494,1396,2491,1360" shape="poly">
-        <!--           Blue highlighted Buildings-->
-                    <area href="" id="SE01" building="SE01" full="tooltip" coords="1331,237,1127,235,1127,246,973,247,973,309,1048,309,1069,330,1048,363,1059,377,1073,370,1080,377,1091,377,1102,391,1116,381,1130,377,1137,363,1177,359,1184,338,1295,338,1306,302,1313,280,1331,284" shape="poly">
-                    <area href="" id="SE04" building="SE04" full="tooltip" coords="1123,434,1019,434,1019,462,1037,466,1041,530,1130,534,1130,484,1120,484,1130,484" shape="poly">
-                    <area href="" id="SE02" building="SE02" full="tooltip" coords="1159,566,1009,563,1009,703,987,703,995,760,980,764,977,810,1156,814,1152,771,1141,771,1138,645,1156,641" shape="poly">
-                    <area href="" id="SE06" building="SE06" full="tooltip" coords="1166,419,1238,419,1238,563,1267,563,1267,649,1163,649" shape="poly">
-                    <area href="" id="SE09" building="SE09" full="tooltip" coords="1338,681,1392,720" shape="rect">
-                    <area href="" id="SE08" building="SE08" full="tooltip" coords="1335,681,1209,681,1209,713,1166,713,1166,749,1202,749,1206,792,1331,788" shape="poly">
-                    <area href="" id="SE12" building="SE12" full="tooltip" coords="1338,724,1639,727,1643,799,1338,799" shape="poly">
-                    <area href="" id="SE14" building="SE14" full="tooltip" coords="1567,720,1567,670,1600,670,1596,505,1610,505,1610,487,1625,487,1625,505,1668,505,1674,681,1631,678,1632,720" shape="poly">
-                    <area href="" id="SE10" building="SE10" full="tooltip" coords="1495,487,1528,487,1528,508,1549,508,1546,530,1556,530,1556,601,1571,623,1571,666,1492,669,1492,601,1474,601,1474,512,1495,508" shape="poly">
-                    <area href="" id="SE16" building="SE16" full="tooltip" coords="1800,482,1800,580,1800,616,1778,632,1742,632,1742,715,1753,715,1750,736,1764,740,1764,754,1900,754,1904,747,1954,743,1954,718,1964,718,1961,708,1986,708,1982,682,1964,675,1964,647,1911,643,1911,614,1932,611,1936,546,1868,546,1864,495,1828,495,1828,484" shape="poly">
+
                 </map>
             </div>
         </div>
@@ -249,23 +247,6 @@
             .mapster('snapshot')
             .mapster('rebind', basic_opts);
         $('#CARI').bind('mouseover', function () {
-            $('img').mapster('tooltip', this, $(this).attr('full'));
-
-        });
-    }
-
-    function selectBLUE() {
-        $('area').bind('mouseover', function () {
-            $('img').mapster('tooltip');
-        });
-        $('img').mapster(initial_opts)
-            .mapster('set', true, 'SE01,SE04,SE02,SE06,SE08,SE09,SE12,SE10,SE14,SE16', {
-                fill: true,
-                fillColor: 'FFFF00'
-            })
-            .mapster('snapshot')
-            .mapster('rebind', basic_opts);
-        $('#SE01,#SE04,#SE02,#SE06,#SE08,#SE09,#SE12,#SE10,#SE14,#SE16').bind('mouseover', function () {
             $('img').mapster('tooltip', this, $(this).attr('full'));
 
         });
